# doc_web_view

./: QUICKSTART.md  README.md  start-dev.bat  start-dev.sh  test-conversion.csv  test-conversion.html
backend/doctomd_service/: .env  README.md  create-env-mistral.py  install-tesseract-unix.sh  install-tesseract-windows.bat  install-tesseract.md  main.py  pyproject.toml  requirements.txt  test-fast.py  test-mistral.py  test-retry.py
frontend/: .gitignore  ARCHITECTURE.md  MIGRATION.md  README.md  debug-ui.html  eslint.config.mjs  next.config.js  package-lock.json  package.json  tailwind.config.js  test-debug.html
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/convert/: route.ts
frontend/app/api/convert-fast/: route.ts
frontend/app/api/convert-url/: route.ts
frontend/app/api/health/: route.ts
frontend/app/api/supported-formats/: route.ts
frontend/components/: FileUpload.tsx  MarkdownViewer.tsx  UrlConverter.tsx
frontend/components/mdx/: index.ts  mdx.tsx
frontend/components/mdx/components/: code-block.tsx  headings.tsx  index.ts  links.tsx  lists.tsx  text.tsx
frontend/components/mdx/config/: language-map.ts
frontend/components/mdx/processor/: index.ts  mathProcessor.ts  textProcessor.ts
frontend/components/mdx/types/: mdx.types.ts
frontend/constants/: index.ts  models.ts  my-info.ts
frontend/constants/firebase/: dev-brand-img.ts  index.ts
frontend/core/tailwind/: components.css
frontend/hooks/: use-mobile.tsx
frontend/lib/: actions.ts  hooks.ts
frontend/types/: api.ts
